--- a/src/Kanbas/Courses/Assignments/index.css
+++ b/src/Kanbas/Courses/Assignments/index.css
@@ -45,3 +45,21 @@ ul .wd-week {
     background: #e8e8e8;
     color: black;
 }
+
+div.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed; /* Ensure the modal stays in place even when scrolling */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 9999; /* Ensure the modal is on top */
+  }
+  
+  .modal-dialog {
+    margin: 0;
+  }
+  
